--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,4 +1,5 @@
 @import url(global.css);
-@import url(header.css);
+@import url(navegacaoum.css);
+@import url(navegacaodois.css);
 @import url(main.css);
 @import url(footer.css);
